--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,14 @@
       <version>2.3.232</version>
       <scope>runtime</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.34</version> <!-- проверьте наличие более новой версии -->
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
