--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
+      <version>3.3.4</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
