--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.org.springframework.security=DEBUG
