--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 logging.level.org.springframework.security=DEBUG
+spring.thymeleaf.cache=false
+
+spring.main.web-application-type=servlet
+spring.web.error.include-message=always
