--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.34</version> <!-- проверьте наличие более новой версии -->
+      <version>1.18.34</version>
       <scope>provided</scope>
     </dependency>
 
@@ -68,7 +68,6 @@
       <artifactId>spring-boot-starter-security</artifactId>
       <version>3.3.4</version>
     </dependency>
-
 
   </dependencies>
 
