--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # MySQL ?????????
 spring.datasource.url=jdbc:mysql://localhost:3306/dbforpp
 spring.datasource.username=root
-spring.datasource.password=82EsBZEc181
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate ?????????
